--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Ryan Naka</title>
+  <title>Ryan N</title>
 </head>
 
 <body>
@@ -12,7 +12,7 @@
     <tr>
       <td><img src="ryan.png" alt="abstract art" /></td>
       <td>
-        <h1>Ryan Naka</h1>
+        <h1>Ryan N</h1>
         <p>
           <em>shemllo#2667 | ryannaka.eth
         </p>
