--- a/video/index.html
+++ b/video/index.html
@@ -1,1 +1,22 @@
+<!DOCTYPE html>
+
+<html>
+	<head>
+	        <title>tallenete.mp4</title>
+	</head>
+
+    <body>
+
+
+
+        <video>controls>
+            <source src"ryan2.mp4" type"video/mp4">
+        </video>
+
+    </body>
+</html>
+
+        
+
+
 
