--- a/video/index.html
+++ b/video/index.html
@@ -1,20 +1,7 @@
 <!DOCTYPE html>
 
 <html>
-	<head>
-	        <title>tallenete.mp4</title>
-	</head>
-
-    <body>
-
-
-
-        <video>controls>
-            <source src"ryan2.mp4" type"video/mp4">
-        </video>
-
-    </body>
-</html>
+	<h1> Ryan </h1>
 
         
 
