--- a/video/index.html
+++ b/video/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 
 <html>
-	<h1> Ryan </h1>
+	<head>
+	        <title>tallenete.mp4</title>
+	</head>
+    <body>
+        <iframe width="420" height="315"
+src="https://youtu.be/FviTtRTIGDE">
+</iframe>
+    </body>
+</html>
 
         
-
 
 
