--- a/video/index.html
+++ b/video/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-	        <title>tallenete.mp4</title>
+	        <title>video</title>
 	</head>
     <body>
         <iframe width="420" height="315"
