--- a/warith/index.html
+++ b/warith/index.html
@@ -1,3 +1,4 @@
 <h1>Warith<h1>
 <td><img src="warith.png" alt="warith cocaine" /></td>
 <td><img src="warith2.png" alt="warith minors" /></td>
+<td><img src="warith3.png" alt="warith3" /></td>
