--- a/warith/index.html
+++ b/warith/index.html
@@ -2,3 +2,4 @@
 <td><img src="warith.png" alt="warith cocaine" /></td>
 <td><img src="warith2.png" alt="warith minors" /></td>
 <td><img src="warith3.png" alt="warith3" /></td>
+<td><img src="warith fingering.png" alt="warith3" /></td>
