New Code for icon

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-
+// CREDIT GOES TO PRISMKYLE FOR THE TEMP!
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 
 <head>
   <meta charset="utf-8">
   <title>Ryan N</title>
+  <link rel"shortcut icon" type="image/png" href="img/favicon.png">
 </head>
 
 <body>
