--- a/warith/index.html
+++ b/warith/index.html
@@ -1,3 +1,8 @@
+<head>
+  <meta charset="utf-8">
+  <title>i love warith</title>
+  <link rel"shortcut icon" type="image/png" href="img/favicon.png">
+</head>
 <h1>Warith<h1>
 <td><img src="warith.png" alt="warith cocaine" /></td>
 <td><img src="warith2.png" alt="warith minors" /></td>
