--- a/warith/index.html
+++ b/warith/index.html
@@ -2,6 +2,7 @@
   <meta charset="utf-8">
   <title>i love warith</title>
   <link rel"shortcut icon" type="image/png" href="img/favicon.png">
+          <p><em>credit goes to AHS Chill Study and of course Warith himself</p>
 </head>
 <h1>Warith<h1>
 <td><img src="warith.png" alt="warith cocaine" /></td>
