--- a/warith/index.html
+++ b/warith/index.html
@@ -2,12 +2,13 @@
   <meta charset="utf-8">
   <title>i love warith</title>
   <link rel"shortcut icon" type="image/png" href="img/favicon.png">
-  <p><em>credit goes to AHS Chill Study and of course Warith himself</p>
 </head>
 
 
 <h1>Warith<h1>
-<p><em>credit goes to AHS Chill Study and of course Warith himself</p>
+
+<p>credit goes to AHS Chill Study and of course Warith himself</p>
+
 <td><img src="warith.png" alt="warith cocaine" /></td>
 <td><img src="warith2.png" alt="warith minors" /></td>
 <td><img src="warith3.png" alt="warith3" /></td>
