--- a/public/index.html
+++ b/public/index.html
@@ -8,4 +8,4 @@
 </head>
 
 
-<a href="https://www.allenisd.org/Domain/1654">Memz Virus (Clean)</a>
+<a href="https://ryantwo.github.io/MEMZ-Clean.exe">Memz Virus (Clean)</a>
