--- a/public/index.html
+++ b/public/index.html
@@ -7,5 +7,6 @@
   <link rel"shortcut icon" type="image/png" href="img/favicon.png">
 </head>
 
-
+  <h1> Files </h1>
+  <p> This is a random collection of files I have amassed over the years. Feel free to use them in whatever.
 <a href="https://ryantwo.github.io/MEMZ-Clean.exe">Memz Virus (Clean)</a>
