--- a/public/index.html
+++ b/public/index.html
@@ -9,4 +9,4 @@
 
   <h1> Files </h1>
   <p> This is a random collection of files I have amassed over the years. Feel free to use them in whatever.
-<a href="https://ryantwo.github.io/MEMZ-Clean.exe">Memz Virus (Clean)</a>
+<a href="https://ryantwo.github.io/public/MEMZ-Clean.exe">Memz Virus (Clean)</a>
