Updated Memz Link

--- a/public/index.html
+++ b/public/index.html
@@ -13,5 +13,5 @@
 
 
     <li>
-<a href="https://ryantwo.github.io/public/MEMZ-Clean.exe">Memz Virus (Clean)</a>
+<a href="https://drive.google.com/drive/folders/1nsRyP_adH1cGYt3HQaH7Bv2Wax-MwzAe?usp=sharing">Memz Virus (Clean)</a>
     </li>
