--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,19 @@
   <p> This is a random collection of files I have amassed over the years. Feel free to use them in whatever.
 
 
-
     <li>
 <a href="https://drive.google.com/drive/folders/1nsRyP_adH1cGYt3HQaH7Bv2Wax-MwzAe?usp=sharing">Memz Virus (Clean)</a>
     </li>
+    
+    <li>
+<a href="https://drive.google.com/file/d/1srNLA336-qjVxLs4DW7uUYLH14icuKuR/view">osu! (Google Drive Portable)</a>
+    </li>
+
+    <li>
+<a href="https://drive.google.com/drive/folders/1cMkw8i0MtcLVfQcwd_nIoIvITCqR1Kum?usp=sharing">Geometry Dash (Google Drive Portable)</a>
+    </li>
+
+    <li>
+<a href="https://drive.google.com/file/d/0BwF6QbkAr7fxQXRMc0Q2c1ZObGs/view?resourcekey=0--H53fRsXdBpgvYX6PhmLEA">Never Gonna Give You Up (HIGH QUALITY MP3)</a>
+    </li>
+
