--- a/warith/index.html
+++ b/warith/index.html
@@ -13,3 +13,4 @@
 <td><img src="warith2.png" alt="warith minors" /></td>
 <td><img src="warith3.png" alt="warith3" /></td>
 <td><img src="warith fingering.png" alt="warith3" /></td>
+<td><img src="warithzoom.jpg" alt="warith4" /></td>
