--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 
 <body>
-  <table cellspacing=20>
+  https://ryantwo.github.io/public/
+  <a href="https://ryantwo.github.io/public/">CLICK HERE FOR GAME DOWNLOADS</a>
+
+<table cellspacing=20>
     <tr>
       <td><img src="ryan.png" alt="abstract art" /></td>
       <td>
