--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <td>
         <h1>Ryan N</h1>
         <p>
-          <em>shemllo#2667 | ryannaka.eth
+          <em>shemllo#2667 | ryannaka.eth | Vice President of Baller Nation
         </p>
         <p>Building The Future</a>
 
