--- a/bamboo/index.html
+++ b/bamboo/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Sneakers</title>
+  <title>Bamboo Seakers</title>
   <link rel"shortcut icon" type="image/png" href="img/favicon.png">
 </head>
 
@@ -12,7 +12,7 @@
 
 <table cellspacing=20>
     <tr>
-      <td><img src="ryan.png" alt="abstract art" /></td>
+      <td><img src="bamboo.jpg" alt="picture" /></td>
       <td>
         <h1>Bamboo Sneakers</h1>
         <p>
@@ -44,39 +44,6 @@
     Sizes 7-13
     </li>
 <hr>
-  <h3>Work Experience</h3>
-  <table cellspacing="10">
-    <thead>
-      <tr>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>2020</td>
-        <td>Breeze Gmails Sales Staff</td>
-      </tr>
-      <tr>
-        <td>2020</td>
-        <td>Stack Monitors Moderator/Bot Restock Coordinator</td>
-      </tr>
-    </tbody>
-  </table>
-  <hr>
-   <h3>Skills</h3>
-    <table cellspacing="10">
-      <tr>
-        <td>Typing</td>
-        <td></td>
-      </tr>
-      <tr>
-        <td><img src="typing2.png" alt="monkeytype" /></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td>Alto Saxophone</td>
-        <td></td>
-      </tr>
-    </table>
   <hr/>
 </body>
 
