--- a/bamboo/index.html
+++ b/bamboo/index.html
@@ -44,7 +44,10 @@
     Sizes 7-13
     </li>
 <hr>
-  <hr/>
+      <li>
+<a href="ryantwo.github.io/bamboo/page3.html">Memz Virus (Clean)</a>
+    </li>
+<hr/>
 </body>
 
 </html>
