--- a/bamboo/index.html
+++ b/bamboo/index.html
@@ -45,7 +45,7 @@
     </li>
 <hr>
       <li>
-<a href="ryantwo.github.io/bamboo/page3.html">Why You should buy from us?</a>
+<a href="page3.html">Why You should buy from us?</a>
     </li>
 <hr/>
 </body>
