--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>Ryan N</title>
   <link rel"shortcut icon" type="image/png" href="img/favicon.png">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
