--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <table cellspacing=20>
     <tr>
-      <td><img src="ryantwo.png" alt="abstract art" /></td>
+      <td><img src="ryantwo.PNG" alt="abstract art" /></td>
       <td>
         <h1>Ryan N</h1>
         <p>
