--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <table cellspacing=20>
     <tr>
-      <td><img src="wap2.jpg" alt="abstract art" /></td>
+    <img src="wap2.jpg" alt="abstract art" />
       <td>
         <h1>Ryan N</h1>
         <p>
