--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <table cellspacing=20>
     <tr>
-    <img src="wap2.jpg" alt="abstract art" />
+	    <td><img src="wap2.jpg" alt="abstract art" /></td>
       <td>
         <h1>Ryan N</h1>
         <p>
@@ -73,6 +73,7 @@
       <tr>
         <td>Alto Saxophone</td>
         <td></td>
+	 <td><img src="duy.png" alt="monkeytype" /></td>
       </tr>
     </table>
   <hr/>
