duy picture retry

--- a/duy/index.html
+++ b/duy/index.html
@@ -1,336 +1,100 @@
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
-    <li>
-<td><img src="duy.png" alt="monkeytype" /></td>
-    </li>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
+<td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
