--- a/duy/index.html
+++ b/duy/index.html
@@ -1,4 +1,4 @@
-<h1> hi duy ❤ 🙁👉👈
+<h1> hi duy ❤ 🙁👉👈 </h1>
 
 <td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
 <td><img src="duy.png" alt="duy picture!11!!!1111" /></td>
