--- a/warith/index.html
+++ b/warith/index.html
@@ -4,5 +4,5 @@
 <td><img src="warith3.png" alt="abstract art" /></td>
 <td><img src="warithgirl.png" alt="abstract art" /></td>
 <td><img src="warithmen.png" alt="abstract art" /></td>
-<td><img src="warithzoom.png" alt="abstract art" /></td>
+<td><img src="warithzoom.jpg" alt="abstract art" /></td>
 
