--- a/warith/index.html
+++ b/warith/index.html
@@ -5,4 +5,5 @@
 <td><img src="warithgirl.png" alt="abstract art" /></td>
 <td><img src="warithmen.png" alt="abstract art" /></td>
 <td><img src="warithzoom.jpg" alt="abstract art" /></td>
+<td><img src="warithdrugs.png" alt="abstract art" /></td>
 
